# dockyard

./: .clang-tidy  .clangd  .env  .gitignore  CMakeLists.txt  CMakePresets.json
3PP/: stb.c
assets/editor/: Dockforge.ini
assets/shaders/: bindless.slang  brdf_lut_gen.slang  canvas_renderer.slang  composite.frag.spv  composite.slang  composite.vert.spv  culling.slang  depth.slang  depth.vert.spv  equirect_to_cubemap.slang  forward.frag.spv  forward.slang  forward.vert.spv  gui.slang  handle.slang  irradiance_convolve.slang  push_constant.slang  shadow.slang  skybox.slang  specular_prefilter.slang
assets/shaders/include/: constants.slang  csm.slang  ibl.slang  pbr.slang  tonemap.slang
include/: PCH.hpp
include/dockforge/: component_inspector.hpp  component_renderers.hpp  dockforge.hpp  editor_camera.hpp  editor_utils.hpp  free_camera_controller.hpp  matrix_cache.hpp  path_camera_controller.hpp  scene_outlier.hpp
include/dockyard/: app.hpp  binary_stream.hpp  bindless_descriptor.hpp  bindless_handle.hpp  bindless_pool_entries.hpp  buffer.hpp  canvas_renderer.hpp  check_operation.hpp  compiler.hpp  component_traits.hpp  components.hpp  context.hpp  device_geometry.hpp  event_callbacks.hpp  events.hpp  forward.hpp  freelist_pool.hpp  imgui_renderer.hpp  log.hpp  mesh.hpp  mesh_loader.hpp  pipeline_builder.hpp  renderdoc.hpp  scene.hpp  scene_renderer.hpp  scene_serialiser.hpp  scope_exit.hpp  shader_watcher.hpp  texture.hpp  texture_upload_pool.hpp  thread_safe_memory_cache.hpp  types.hpp  vfs.hpp  vfs_path.hpp  vk_check.hpp
scripts/: compile_shader.sh
src/dockforge/: cube_vertices.inl  dockforge.cpp  editor_camera.cpp  editor_utils.cpp  free_camera_controller.cpp  main.cpp  matrix_cache.cpp  path_camera_controller.cpp
src/dockyard/: allocator.cpp  app.cpp  bindless_descriptor.cpp  bindless_handle.cpp  buffer.cpp  canvas_renderer.cpp  compiler.cpp  component_traits.cpp  components.cpp  context.cpp  device_geometry.cpp  event_callbacks.cpp  imgui_renderer.cpp  log.cpp  mesh_loader.cpp  pipeline_builder.cpp  renderdoc.cpp  scene.cpp  scene_renderer.cpp  shader_watcher.cpp  texture.cpp  texture_upload_pool.cpp  vfs.cpp
